--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "new": "npx zenn new:article --slug slug --title タイトル --type idea --emoji ✨",
+    "preview": "npx zenn preview"
   },
   "keywords": [],
   "author": "",
